<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/card_bg"
    android:id="@+id/main_view"
    android:padding="@dimen/_8sdp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTripName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorPrimaryDark"
        tools:text="TripName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTripSource"
        android:layout_width="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
android:drawablePadding="@dimen/_3sdp"
        android:padding="@dimen/_3sdp"
        tools:text="Acropolis" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTripDestination"
        android:layout_width="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:drawablePadding="@dimen/_3sdp"
        android:padding="@dimen/_3sdp"
        tools:text="Chandkheda" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView

            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/start_date"
            android:layout_height="wrap_content"
            android:textSize="12sp"
             />

        <androidx.appcompat.widget.AppCompatTextView

            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/end_date"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTripStartDate"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="@android:color/background_dark"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="22/10/2012" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTripEndDate"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="22/10/2012" /></LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGoMap"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_border_dark"
            android:padding="@dimen/_5sdp"
            android:textAlignment="center"
            android:text="@string/go_to_map"
            android:drawableLeft="@drawable/ic_map_black_24dp"
            app:textAllCaps="true"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:maxLines="1"
            android:ellipsize="end"
              />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEndTrip"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_flight_land_black_24dp"
            android:background="@drawable/bg_border_dark"
            android:padding="@dimen/_5sdp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/end_trip"
            app:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:maxLines="1"
            android:ellipsize="end"
             /></LinearLayout>

</LinearLayout>